update: 新增问题修改功能，设置JWT过期时间为10分钟
