# backend/docs/swagger.yaml
@@ -210,7 +210,7 @@ paths:
       summary: 分类修改
       tags:
       - 管理员私有方法
-  /problems:
+  /admin/problems:
     post:
       parameters:
       - description: Authorization
@@ -279,6 +279,81 @@ paths:
           schema:
             $ref: '#/definitions/service.FailResponse'
       summary: 问题创建
+      tags:
+      - 管理员私有方法
+    put:
+      parameters:
+      - description: Authorization
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: identity
+        in: formData
+        name: identity
+        required: true
+        type: string
+      - description: 标题
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: 内容
+        in: formData
+        name: content
+        required: true
+        type: string
+      - description: 最大运行时间(s)
+        in: formData
+        name: max_runtime
+        required: true
+        type: string
+      - description: 最大运行内存(kb)
+        in: formData
+        name: max_mem
+        required: true
+        type: string
+      - collectionFormat: multi
+        description: 分类ID数组
+        in: formData
+        items:
+          type: integer
+        name: category_ids
+        type: array
+      - collectionFormat: multi
+        description: 测试样例数组
+        in: formData
+        items:
+          type: string
+        name: test_cases
+        required: true
+        type: array
+      responses:
+        "200":
+          description: 成功返回问题详情
+          schema:
+            $ref: '#/definitions/service.SuccessResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "403":
+          description: 权限不足
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "404":
+          description: 资源不存在
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/service.FailResponse'
+      summary: 问题修改
       tags:
       - 管理员私有方法
   /problems/detail:
